Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1136,8 +1136,7 @@ section {
     .card {
         box-shadow: none;
         page-break-inside: avoid;
-        display: inline-table; /* Make element unbreakable for Safari */
-        box-shadow: var(--box-shadow-tiny-light-mode);
+        border: 1px solid black;
     }
 
     .card:hover {
